_deploy/k8s.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: site
spec:
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: ghcr.io/samuelchen/samuelchen.github.io:hexo-pages
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "64Mi"
            cpu: "300m"
        ports:
        - containerPort: 80
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                - key: region
                  operator: NotIn
                  values: [cn, ]
              weight: 100
