_deploy/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
spec:
  selector:
    app: blog
  ports:
  - port: 80
    targetPort: 80
