_deploy/k8s.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  namespace: blog
spec:
  rules:
  - host: blog.samuelchen.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: blog
            port: 
              number: 80
